[gd_scene load_steps=9 format=3 uid="uid://bw5d183osacco"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_wbvye"]
[ext_resource type="Texture2D" uid="uid://elvflalqk6l3" path="res://art/temp_assets/IMG_9613.jpeg" id="2_5l7ef"]
[ext_resource type="Script" path="res://options.gd" id="3_cmlxy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_djmvq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5l7ef")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cpt7"]
bg_color = Color(0.210507, 0.210507, 0.210507, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muixq"]
bg_color = Color(0.389287, 0.389287, 0.389286, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jgl5p"]
bg_color = Color(0.286684, 0.286684, 0.286683, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wsfef"]
bg_color = Color(0.468128, 0.468128, 0.468128, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90
corner_detail = 1

[node name="main_menu" type="Node2D"]
script = ExtResource("1_wbvye")

[node name="Initial" type="Node2D" parent="."]

[node name="hubert_start_animation" type="AnimatedSprite2D" parent="Initial"]
position = Vector2(307, 400)
scale = Vector2(0.736157, 0.736157)
sprite_frames = SubResource("SpriteFrames_djmvq")

[node name="Control" type="Control" parent="Initial"]
layout_mode = 3
anchors_preset = 0
offset_right = 583.0
offset_bottom = 177.0

[node name="game_name" type="Label" parent="Initial/Control"]
layout_mode = 0
offset_left = -1.0
offset_top = 16.0
offset_right = 622.0
offset_bottom = 173.0
theme_override_font_sizes/font_size = 55
text = "HOMELESS HUBERT'S HAMBURGER HUNT"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Panel" type="Panel" parent="Initial"]
offset_left = 627.0
offset_top = 17.0
offset_right = 1134.0
offset_bottom = 627.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0cpt7")

[node name="play_button" type="Button" parent="Initial"]
offset_left = 651.0
offset_top = 51.0
offset_right = 1112.0
offset_bottom = 169.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_muixq")
text = "START GAME"
autowrap_mode = 3

[node name="options_button" type="Button" parent="Initial"]
offset_left = 652.0
offset_top = 197.0
offset_right = 1113.0
offset_bottom = 315.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_muixq")
text = "OPTIONS"

[node name="credits_button" type="Button" parent="Initial"]
offset_left = 651.0
offset_top = 341.0
offset_right = 1112.0
offset_bottom = 459.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_muixq")
text = "CREDITS"

[node name="exit_button" type="Button" parent="Initial"]
offset_left = 653.0
offset_top = 484.0
offset_right = 1114.0
offset_bottom = 602.0
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_muixq")
text = "EXIT"

[node name="Options" type="Node2D" parent="."]
visible = false
script = ExtResource("3_cmlxy")

[node name="Background" type="Panel" parent="Options"]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jgl5p")

[node name="Panel" type="Panel" parent="Options"]
offset_left = 26.0
offset_top = 24.0
offset_right = 1126.0
offset_bottom = 624.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wsfef")

[node name="master_audio_bar" type="HScrollBar" parent="Options"]
offset_left = 56.0
offset_top = 258.0
offset_right = 306.0
offset_bottom = 280.0

[node name="volume_label_control" type="Control" parent="Options"]
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 124.0
offset_right = 432.0
offset_bottom = 193.0

[node name="volume_label" type="Label" parent="Options/volume_label_control"]
layout_mode = 1
offset_right = 362.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 40
text = "Volume Settings:"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="master_volume_label_control2" type="Control" parent="Options"]
layout_mode = 3
anchors_preset = 0
offset_left = -6.0
offset_top = 190.0
offset_right = 376.0
offset_bottom = 259.0

[node name="master_volume_label" type="Label" parent="Options/master_volume_label_control2"]
layout_mode = 1
offset_right = 362.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 30
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="music_volume_label_control" type="Control" parent="Options"]
layout_mode = 3
anchors_preset = 0
offset_left = -17.0
offset_top = 291.0
offset_right = 365.0
offset_bottom = 360.0

[node name="music_volume_label" type="Label" parent="Options/music_volume_label_control"]
layout_mode = 1
offset_right = 362.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 30
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="sfx_volume_label_control" type="Control" parent="Options"]
layout_mode = 3
anchors_preset = 0
offset_left = -34.0
offset_top = 396.0
offset_right = 348.0
offset_bottom = 465.0

[node name="sfx_volume_label" type="Label" parent="Options/sfx_volume_label_control"]
layout_mode = 1
offset_left = -9.0
offset_top = -1.0
offset_right = 364.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 30
text = "SFX VOLUME"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="music_audio_bar" type="HScrollBar" parent="Options"]
offset_left = 52.0
offset_top = 361.0
offset_right = 308.0
offset_bottom = 381.0

[node name="sfx_audio_bar" type="HScrollBar" parent="Options"]
offset_left = 53.0
offset_top = 455.0
offset_right = 308.0
offset_bottom = 476.0

[node name="Credits" type="Node2D" parent="."]

[connection signal="pressed" from="Initial/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Initial/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Initial/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Initial/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="Options/master_audio_bar" to="Options" method="_on_master_audio_bar_value_changed"]
[connection signal="value_changed" from="Options/music_audio_bar" to="Options" method="_on_music_audio_bar_value_changed"]
[connection signal="value_changed" from="Options/sfx_audio_bar" to="Options" method="_on_sfx_audio_bar_value_changed"]
